fix(*): add 500 font weight, reduce sponsor image size, align testimonial person name

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,8 @@ nav li a {
   font-size: 1.2rem;
   font-style: normal;
   font-weight: 600;
-  margin-top: 1em;
+  margin-top: 1rem;
+  margin-left: 2rem;
 }
 
 .testimonials-title {
@@ -589,8 +590,8 @@ nav li a {
 
 .sponsor-card {
   font-size: 1.2rem;
-  width: 240px;
-  height: 240px;
+  width: 72px;
+  height: 72px;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
   position: relative;
@@ -1188,7 +1189,6 @@ nav li a {
   text-transform: uppercase;
   line-height: 2rem;
   margin: 0 0 0 1rem;
-  width: 50%;
 }
 
 .dpdc-footer .iff-logo {
